force-app/main/default/objects/Contract/fields/Applied_Discount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount__c</fullName>
    <label>Applied Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>