force-app/main/default/objects/Contract/fields/Asset_Vici_2__c.field-meta.xml
<CustomField>
    <fullName>Asset_Vici_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Vici 2</label>
    <referenceTo>Asset_Vici__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts_2</relationshipName>
    <type>Lookup</type>
</CustomField>