force-app/main/default/objects/Contract/fields/Asset_Vici__c.field-meta.xml
<CustomField>
    <fullName>Asset_Vici__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Vici 1</label>
    <referenceTo>Asset_Vici__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>