force-app/main/default/objects/Contract/fields/Case_Service__c.field-meta.xml
<CustomField>
    <fullName>Case_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>