force-app/main/default/objects/Contract/fields/Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Lost</label>
    <type>Checkbox</type>
</CustomField>