force-app/main/default/objects/Contract/fields/Components_Cost__c.field-meta.xml
<CustomField>
    <fullName>Components_Cost__c</fullName>
    <label>Components Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>