force-app/main/default/objects/Contract/fields/Contract_Final_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Final_End_Date__c</fullName>
    <formula>StartDate + ( ( 365 / 12 ) *  Contract_FinalTerm_months__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Final End Date</label>
    <type>Date</type>
</CustomField>