force-app/main/default/objects/Contract/fields/Contract_FinalTerm_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_FinalTerm_months__c</fullName>
    <label>Contract Final Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>