force-app/main/default/objects/Contract/fields/Contract_Hours_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Hours_Term__c</fullName>
    <label>Contract Yearly Num Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>