force-app/main/default/objects/Contract/fields/Contract_Remain_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contract_Remain_Hours__c</fullName>
    <formula>Contract_Hours_Term__c -  Tot_Hours_Work_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Yearly Remain Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>