force-app/main/default/objects/Contract/fields/Contract_Remain_Hours_ALL__c.field-meta.xml
<CustomField>
    <fullName>Contract_Remain_Hours_ALL__c</fullName>
    <description>Calcolo ore totali del contratto: numero di ore annuali per numero di anni da contratto</description>
    <formula>ContractTerm/12 *  Contract_Hours_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Tot Hours ALL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>