force-app/main/default/objects/Contract/fields/Contract_Term_months_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_months_Formula__c</fullName>
    <formula>MFLOOR(Current_Contract_year__c)*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Yearly Term (months) Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>