force-app/main/default/objects/Contract/fields/Contract_Yearly_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Yearly_End_Date__c</fullName>
    <formula>ADDMONTHS(StartDate , ROUND(Current_Contract_year__c,0)*12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Yearly End Date</label>
    <type>Date</type>
</CustomField>