force-app/main/default/objects/Contract/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PacketEfficiency</fullName>
                <label>Efficient Support Pack</label>
            </value>
            <value>
                <fullName>PacketHours</fullName>
                <label>Hours Pack (Just Measure)</label>
            </value>
            <value>
                <fullName>PacketWarrantyExt_Base</fullName>
                <label>Semi Kasko</label>
            </value>
            <value>
                <fullName>PacketHours(For Dealers)</fullName>
                <label>PacketHours (For Dealers)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>