force-app/main/default/objects/Contract/fields/Current_Contract_year__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_year__c</fullName>
    <formula>IF(TODAY()&lt; EndDate ,1+FLOOR((TODAY()-StartDate)/365),FLOOR((EndDate -StartDate)/365))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contract Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>