force-app/main/default/objects/Contract/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <description>Show if the contract is expired or not</description>
    <formula>TODAY() &gt;    EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Show if the contract is expired or not</inlineHelpText>
    <label>Contract Expired</label>
    <type>Checkbox</type>
</CustomField>