force-app/main/default/objects/Contract/fields/Free_Charge__c.field-meta.xml
<CustomField>
    <fullName>Free_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pacchetto erogato gratuitamente</description>
    <label>Free Charge</label>
    <type>Checkbox</type>
</CustomField>