force-app/main/default/objects/Contract/fields/Man_Power_Cost__c.field-meta.xml
<CustomField>
    <fullName>Man_Power_Cost__c</fullName>
    <label>Man Power Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>