force-app/main/default/objects/Contract/fields/Num_Asset__c.field-meta.xml
<CustomField>
    <fullName>Num_Asset__c</fullName>
    <formula>IF((ISBLANK(Asset_Vici__c)),0,1)+
IF((ISBLANK( Asset_Vici_2__c)),0,1)+
IF((ISBLANK( Asset_Vici_3__c)),0,1)+
IF((ISBLANK( Asset_Vici_4__c)),0,1)+
IF((ISBLANK( Asset_Vici_5__c)),0,1)+
IF((ISBLANK( Asset_Vici_6__c)),0,1)+
IF((ISBLANK( Asset_Vici_7__c)),0,1)+
IF((ISBLANK( Asset_Vici_8__c)),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>