force-app/main/default/objects/Contract/fields/ParentContractID__c.field-meta.xml
<CustomField>
    <fullName>ParentContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>