force-app/main/default/objects/Contract/fields/Remain_Contract_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remain_Contract_Hours__c</fullName>
    <label>Remain Contract Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>