force-app/main/default/objects/Contract/fields/Send_Mail_Yearly_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_Mail_Yearly_Reminder__c</fullName>
    <formula>Contract_Yearly_End_Date__c -  Yearly_Expiration_Notice_formula__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Mail Yearly Reminder</label>
    <type>Checkbox</type>
</CustomField>