force-app/main/default/objects/Contract/fields/Sent_Yearly_Mails_Counter__c.field-meta.xml
<CustomField>
    <fullName>Sent_Yearly_Mails_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sent Yearly Mails Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>