force-app/main/default/objects/Contract/fields/Set_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Set_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Send Mail (30gg)</label>
    <type>Checkbox</type>
</CustomField>