force-app/main/default/objects/Contract/fields/Set_Yearly_Reminder_Counter__c.field-meta.xml
<CustomField>
    <fullName>Set_Yearly_Reminder_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Set Yearly Reminder Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>