force-app/main/default/objects/Contract/fields/TestCmpareDate__c.field-meta.xml
<CustomField>
    <fullName>TestCmpareDate__c</fullName>
    <formula>TODAY()&lt; EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestCmpareDate</label>
    <type>Checkbox</type>
</CustomField>