force-app/main/default/objects/Contract/fields/TestFormulaDate1__c.field-meta.xml
<CustomField>
    <fullName>TestFormulaDate1__c</fullName>
    <formula>(EndDate -StartDate)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestFormulaDate1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>