force-app/main/default/objects/Contract/fields/TestFormulaNum__c.field-meta.xml
<CustomField>
    <fullName>TestFormulaNum__c</fullName>
    <formula>IF( TODAY() &gt;  ADDMONTHS(Contract_Yearly_End_Date__c,-12)  &amp;&amp; TODAY() &lt;=  Contract_Yearly_End_Date__c , TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestFormulaNum</label>
    <type>Checkbox</type>
</CustomField>