force-app/main/default/objects/Contract/fields/Tot_Hours_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Tot_Hours_Work_Order__c</fullName>
    <description>Get from all Work Ordes the duration hours</description>
    <label>Tot Yearly Hours Work Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>