force-app/main/default/objects/Contract/fields/Total_Hour_Work_Order_ALL__c.field-meta.xml
<CustomField>
    <fullName>Total_Hour_Work_Order_ALL__c</fullName>
    <description>Per calcolo totale ore fatte</description>
    <label>Total Hour Work Order ALL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>