force-app/main/default/objects/Contract/fields/Yearly_Expiration_Notice_formula__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Expiration_Notice_formula__c</fullName>
    <formula>CASE(Yearly_Expiration_Notice__c,
  &quot;15 Days&quot;, 15,
  &quot;30 Days&quot;, 30,
  &quot;45 Days&quot;, 45,
  &quot;60 Days&quot;, 60,
  &quot;90 Days&quot;, 90,
  &quot;120 Days&quot;, 120,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Expiration Notice (formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>